static/scss/assembly.scss
.no-scroll, .no-scroll body {
  overflow: hidden;
  height: 100%;
}

// centered content
.content-wrap {
  display: table;
}

.content-row {
  display: table-cell;
  vertical-align: middle;
}

.fade {
  opacity: 0;
  @include transition(opacity 200ms ease-out);
}


.m-wrap {
  opacity: 1;
  @include transition(opacity 1s ease);
}
.m-transparent {
  opacity: 0;
}


.blanket {
  background: -moz-linear-gradient(top,  rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.6) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.4)), color-stop(100%,rgba(0,0,0,0.6))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 100%); /* IE10+ */
  background: linear-gradient(to bottom,  rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.6) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66000000', endColorstr='#99000000',GradientType=0 ); /* IE6-9 */
}

.blanket,
.blanket-light, 
.blanket-overlay {
  top: 0;
  @extend %absolute;
  width: 100%;
  height: 100%;
}
.blanket-light {
  background: -moz-linear-gradient(top,  rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.4) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0.4))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.4) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.4) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.4) 100%); /* IE10+ */
  background: linear-gradient(to bottom,  rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.4) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a000000', endColorstr='#66000000',GradientType=0 ); /* IE6-9 */
}

//------------------
// Rows
//------------------
.row-up {
  background-color: $blue;
  height: rem(160);
  padding-top: rem(56);
  @extend %text-center;
  @extend %relative;
}

.button-row {
  padding-top: rem(30);
  padding-bottom: rem(60);
  @extend %text-center;
  @extend %clearfix;
}

.button-row-left {
  text-align: left;
}

.button-row-paginate {
  .button {
    margin: 0 rem(40);
  }
}

.details-row {
  margin-bottom: 0;
  @extend %clearfix;

  span {
    margin: 0 rem(20);
  }

  .fb-like, .fb-like span {
    margin: 0;
  }

  .data-views {
    margin-top: rem(15);
  }

  .bullet {
    background-color: #cccccc;
    display: inline-block;
    vertical-align: middle;
    border-radius: 20px;
    height: rem(5);
    width: rem(5);
  }

  .button-share {
    margin-top: rem(-16);
    @extend %pull-right;
  }
}

.article-row-content,
.details-row {
  width: 83.33333333333334%;
  margin: 0 auto;
}

.article-row {
  
  .article-row-content {
    padding: rem(60) 0;
    
    img {
      display: block;
      width: 100%;
      margin-bottom: rem(30);
    }
  }

  .article-row-no-break {
    padding-top: 0;
  }

  .details-row {
    margin-top: rem(80);
    padding: 0 rem(40);
  }

  .details-row-secondary {
    margin-top: 0;
    color: #cccccc;
    text-align: center;
    padding: rem(40) rem(80);
  }
}

.article-region-row {
  display: table;
  width: 100%;
  padding: 0 rem(40);

  p, h1, h2, h3, h4, h5, h6 {
    padding: 0;
  }
}


.search-row {
  .search-row-input {
    padding: 0 rem(260) 0 rem(145);
    top: rem(37);
    width: 100%;
    @extend %absolute;
  }
 
  .button-search {
    @extend %absolute;
    top: 0;
    right: rem(70);
  }
}

.search-row-results {
  top: rem(109);
  bottom: 0;
  overflow: auto;
  width: 100%;
  @extend %absolute;

  .container {
    max-width: rem(1140);
    margin: 0 auto;
    padding: rem(60) rem(260) 0 rem(150);
  }
}

.input-search {
  border: none;
  border-bottom: 2px solid $pink;
  font-size: rem(24);
  padding: rem(20) 0;
  width: 100%;

  &:active, &:focus {
    border-color: $highlight;
  }
}

.sly-controls {
  .sly-next,
  .sly-prev,
  .sly-next:active,
  .sly-prev:active,
  .sly-next:focus,
  .sly-prev:focus {
    background-color: transparent;
    border: none;
    color: $white;
    display: block;
    font-size: 30px;
    outline: none;
    position: absolute;
    top: 50%;
  }

  .sly-prev {
    left: rem(20);
  }
  .sly-next {
    right: rem(20);
  }

  .sly-next:hover,
  .sly-prev:hover {
    cursor: pointer;
    color: $pink;
  }

  .disabled, 
  .disabled:hover {
    opacity: 0.4;
    color: $white;
  }
}

::-webkit-input-placeholder {
   color: #000;
}

:-moz-placeholder { /* Firefox 18- */
   color: #000; 
}

::-moz-placeholder {  /* Firefox 19+ */
   color: #000; 
}

:-ms-input-placeholder {  
   color: #000;
}

